[kestrel - 760] - 877 - Alignment issues fix
877 alignment issues are fixed

--- a/ui.apps/src/main/content/jcr_root/apps/jlr/components/offers/v1/offers/clientlibs/css/offers.css
+++ b/ui.apps/src/main/content/jcr_root/apps/jlr/components/offers/v1/offers/clientlibs/css/offers.css
@@ -426,9 +426,9 @@
   }
 
   .cmp-offersContainer .offer .offerImage {
-    margin-top: 5.21%;
-    margin-left: 3.92%;
-    margin-right: 3.92%;
+    margin-top: 24px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
   .offerFinanceBoxes {
